assets/stylesheets/site.css
.sr-hide
{
	background: var(--code);
	color: var(--bg);
	height: 30px;
	left: 0;
	padding: 8px;
	position: absolute;
	transform: translateY(-100%);
	transition: transform 0.3s;
}

.sr-hide:focus
{
	transform: translateY(0%);
}

body>header h1 .picture
{
	border: 0;
	display: inline-block;
	margin: 0 auto;
	vertical-align: middle;
	width: 50px;
}

header nav ol
{
	margin: 0 auto;
	width: 33vw;
	align-items: center;
	justify-items: center;
	justify-content: space-evenly;
}

header nav ol li,
header nav ul li
{
	min-inline-size: max-content;
	margin: 0;
}
header nav ol li a,
header nav ul li a
{
	margin: 0;
}

#content h1
{
	text-align: center;
}

#content>footer
{
	text-align: center;
}

main header h2
{
	margin-bottom: 0.5em;
	margin-top: 0;
}

main section
{
	/* Reset some... objectionable changes to simple.css */
	border: none;
	border-radius: inherit;
}

main article:not(.reblog) header h2 a
{
	font-size: 0.5em;
	position: relative;
	text-decoration: none;
	top: -0.3em;
	opacity: 0;
	transition: opacity;
	transition-duration: 250ms;
}

article
{
	border-color: var(--border);
	border-style: solid;
	border-width: 1px 0;
	padding: 1em;
}

article section
{
	padding: 0;
}

article header a.featured
{
	display: block;
}

article details summary
{
	transition-delay: 100ms;
	transition-duration: 250ms;
	transition-property: box-shadow;
}

article details[open] summary
{
	transition-duration: 0ms;
	transition-delay: 0ms;
	box-shadow: none;
}

article .gallery ul,
article .gallery ol
{
	list-style-type: none;
	padding: 0;
	margin: 1em 0;
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(min(128px, 100%), 1fr));
	grid-column-gap: 1em;
	grid-row-gap: 1em;
	user-select: none;
}

article .gallery li a,
article .gallery picture
{
	display: block;
	min-width: 128px;
}

.gallery a img
{
	border: 3px solid white;
}

iframe
{
	border: 1px solid black;
	width: 100%;
	display: block;
}

.reblog section.article-content+p a,
.note section.article-content+p a
{
	font-size: 0.75em;
	text-decoration: none;
	backface-visibility: hidden;
	background-color: #0d47a1;
	border-radius: 6px;
	border-width: 0;
	box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .1) 0 2px 5px 0, rgba(0, 0, 0, .07) 0 1px 1px 0;
	box-sizing: border-box;
	color: #fff;
	cursor: pointer;
	padding: 5px 10px;
	text-align: center;
	transform: translateZ(0);
	transition: all .2s, box-shadow .08s ease-in;
	user-select: none;
	touch-action: manipulation;
}

.reblog section.article-content+p a:focus,
.note section.article-content+p a:focus
{
	box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,
		rgba(50, 50, 93, .2) 0 6px 15px 0,
		rgba(0, 0, 0, .1) 0 2px 2px 0,
		rgba(50, 151, 211, .3) 0 0 0 4px;
}

article .h-card .picture
{
	display: inline-block;
}

.p-author .u-photo
{
	vertical-align: middle;
	display: inline-block;
}

footer section
{
	margin: 0;
}

@media screen and (hover: hover)
{
	main:hover article:not(.reblog) header h2 a
	{
		display: inline;
		opacity: 1;
	}

	.gallery a:hover img
	{
		transition-delay: 100ms;
		transition-duration: 250ms;
		transition-property: box-shadow, border-color;
	}

	.gallery a:hover img
	{
		box-shadow: 0 5px 5px 0 #A3A3A3;
		border-color: #2b2b2b;
	}

	article details summary:hover
	{
		box-shadow: 0 5px 5px 0 #A3A3A3;
	}
}

@media screen and (hover: none)
{
	main header h2 a
	{
		opacity: 1;
		transition: none;
	}
}

